<resources>
    <string name="app_name">TripTracker</string>

    <!-- hints -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_username">Username</string>
    <string name="email">Email Address</string>
    <string name="password_confirm_hint">Confirm Password</string>

    <!-- button text -->
    <string name="submit_button">Submit</string>
    <string name="login_button_text">Login</string>
    <string name="trip_save_button">Save</string>

    <!-- texts -->
    <string name="registration_text">Or register a new account.</string>
    <string name="trip_name">Trip Name:</string>
    <string name="trip_description">Trip Description:</string>
    <string name="trip_start_date">Start Date:</string>
    <string name="trip_end_date">End Date:</string>
    <string name="trip_is_public">Public:</string>

    <!-- Actionbar Labels -->
    <string name="reg_activity_label">Register a TripTracker Account</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>
    <string name="warning_username_empty">Username cannot be empty</string>
    <string name="warning_username_too_short">Username must be at least 3 characters</string>
    <string name="warning_username_invalid">Username must only contain letters and numbers</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>
    <string name="loading_trips">Accessing your trips...</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- menu items -->
    <string name="menu_my_trips">My Trips</string>
    <string name="menu_public_trips">Public Trips</string>
    <string name="menu_logout">Logout</string>
</resources>
